--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 flask = "*"
 
 [dev-packages]
+pylint = "*"
 
 [requires]
 python_version = "3.8"
+
+[scripts]
+server = "python src/app.py"
