--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
+Flask = "*"
 
 [dev-packages]
 pylint = "*"
@@ -15,3 +15,6 @@ python_version = "3.8"
 
 [scripts]
 server = "python src/app.py"
+
+[dev-packages.watchdog]
+extras = [ "watchmedo",]
